# self-annealing

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
demo/example_project/: app.py  error_log.md
self_annealing/: __init__.py  audit.py  cli.py  dependencies.py  doc_search.py  git_helper.py  health.py  mcp.py  memory.py  pipeline.py  safety.py
self_annealing/templates/: CLAUDE.md  error_log.md
tests/: test_audit.py  test_dependencies.py  test_doc_search.py  test_git_helper.py  test_health.py  test_memory.py  test_pipeline.py  test_safety.py
