[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-annealing"
version = "0.1.0"
description = "Persistent error memory & health checker for AI-assisted development"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "colorama>=0.4.6",
]

[project.scripts]
anneal = "self_annealing.cli:main"
